// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Benchmark.Suite > check console output(instrumented=%p)  false 1`] = `
{
  "log": [
    [
      "[CodSpeed] running with @codspeed/tinybench v1.0.0 (simulation mode)",
    ],
    [
      "[CodSpeed] Checked packages/tinybench-plugin/tests/index.integ.test.ts::RegExp",
    ],
    [
      "[CodSpeed] Checked packages/tinybench-plugin/tests/index.integ.test.ts::RegExp2",
    ],
    [
      "[CodSpeed] Done running 2 benches.",
    ],
  ],
  "warn": [],
}
`;

exports[`Benchmark.Suite > check console output(instrumented=%p)  true 1`] = `
{
  "log": [
    [
      "[CodSpeed] Measured packages/tinybench-plugin/tests/index.integ.test.ts::RegExp",
    ],
    [
      "[CodSpeed] Measured packages/tinybench-plugin/tests/index.integ.test.ts::RegExp2",
    ],
    [
      "[CodSpeed] Done running 2 benches.",
    ],
  ],
  "warn": [],
}
`;
